--- a/header.css
+++ b/header.css
@@ -14,7 +14,6 @@
     font-size: 2rem;
     font-weight: 700;
     background-color: #fafafa;
-    box-shadow: -100px 0px 1000px 100px inset #00b4d80a, 100px 0px 1000px 100px inset #27fb6a0e;
 }
 
 #mobileMenu a {
